--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
 	width: 100%;
 	height: 120px;
 	background-color: #4056A1;
-	color: #FFFFFF;
+	color: white;
 	padding-left: 1.5em;	
 	padding-right: 1.5em;
 }
