--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,3 +31,9 @@ body {
 nav span {
   font-family: 'Bungee', sans-serif
 }
+
+.container {
+  width: 90%;
+  align-items: center;
+  background-color: #f4f1ec;
+}
