--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -34,6 +34,6 @@ nav span {
 
 .container {
   width: 90%;
-  align-items: center;
-  background-color: #f4f1ec;
+  margin: 0 auto;
+  background-color: inherit;
 }
