--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,6 +2,7 @@ header {
 	display:flex;
 	flex-direction: column;
 	height: 400px;
+	margin-top: 120px;
 	width: 100%;
 	justify-content: center;
 	align-items: center;
