--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,17 +3,21 @@
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	padding-top: 40px;
 }
 
 .new-tweet label {
-	border-bottom: 3px solid black;
 	padding-top: 5px;
 	margin-bottom: 10px;
 	font-size: 1.2em;
 }
 
-.new-tweet textarea {
-	margin-top: 2px;
+.tweetform {
+	border: none;
+	width: 100%;
+	background-color: transparent;
+	color: black;
+	border-bottom: 3px solid black;
 }
 
 .new-tweet button[type="submit"] {
