--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,6 +6,5 @@
 	width: 100%;
 	justify-content: center;
 	align-items: center;
-	background-color: #D7E5F0;
-	background-image: url("https://www.transparenttextures.com/patterns/arabesque.png");
+	background-color: #dcf4fd;
 }
