--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,10 +5,9 @@ nav {
 	justify-content: space-between;
 	width: 100%;
 	height: 120px;
-	background-color: #4056A1;
+	background-color: #008ECC;
 	color: white;
-	padding-left: 1.5em;	
-	padding-right: 1.5em;
+	padding: 1.5em;	
 }
 
 .logo {
