--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,4 @@
-.container {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	padding-top: 40px;
-}
+
 
 .new-tweet label {
 	padding-top: 5px;
@@ -13,11 +7,9 @@
 }
 
 .tweetform {
-	border: none;
-	width: 100%;
-	background-color: transparent;
+	border: 3px solid #008ECC;
 	color: black;
-	border-bottom: 3px solid black;
+	width: 100%;
 }
 
 .new-tweet button[type="submit"] {
@@ -31,6 +23,7 @@
 
 .new-tweet button:hover {
 	box-shadow: 2px 2px 5px blue;
+	transition: all 0.3s ease; 
 }
 
 footer {
