--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,7 +1,7 @@
 article {
 	border: 4px solid #008ECC;
 	border-radius: 10px;
-	margin: 5em;
+	margin: 1em 0;
 	background-color: white;
 	color: black;
 }
@@ -17,7 +17,6 @@ p {
 	padding-bottom: 30px;
 	padding-left: 20px;
 	margin-left: 2.5%;
-	font-size: 120%;
 }
 
 .tweet header {
@@ -59,4 +58,3 @@ header span {
 .icons i:hover {
 	color: gold;
 }
-
